[gd_scene load_steps=6 format=3 uid="uid://cnlu4oquga1he"]

[ext_resource type="Script" path="res://scripts/entities/enemy_tiny.gd" id="1_r1fr3"]
[ext_resource type="Texture2D" uid="uid://bi07ehgky8ye4" path="res://assets/sprites/duck.png" id="2_vpr3h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hr8gj"]
size = Vector2(14, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kgio"]
size = Vector2(14, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_cvxvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vpr3h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyTiny" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(58, -58)
script = ExtResource("1_r1fr3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -16)
shape = SubResource("RectangleShape2D_hr8gj")

[node name="EnemyBody" type="ColorRect" parent="."]
visible = false
offset_left = -13.0
offset_top = -25.0
offset_right = 13.0
offset_bottom = 25.0
color = Color(0.658824, 0, 0.658824, 1)

[node name="FlashOverlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2, -16)
shape = SubResource("RectangleShape2D_2kgio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cvxvf")
